--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.11.1",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
+    "next-optimized-images": "^2.6.2",
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.13"
